--- a/nft-marketplace/.env
+++ b/nft-marketplace/.env
@@ -3,3 +3,4 @@ NFT_STORAGE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJkaWQ6ZXRocjoweDA
 MORALIS_URL=https://speedy-nodes-nyc.moralis.io/15dc75e7e8918767998ffd47/polygon/mumbai
 NEXT_PUBLIC_NFT_MARKET_ADDRESS=0x412d20788f3b56a8f6d5e51bb747d0866399a82e
 NEXT_PUBLIC_GRAPH_URL=https://api.thegraph.com/subgraphs/name/csw0126/comp3334
+NEXT_PUBLIC_CONTRACT_OWNER=0xaF1b4B9c002dB3cf07A779D15436f6DC13727A0d
