--- a/nft-marketplace/package.json
+++ b/nft-marketplace/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
     "web3modal": "^1.9.5",
     "yup": "^0.32.11"
