--- a/nft-marketplace/package.json
+++ b/nft-marketplace/package.json
@@ -11,9 +11,21 @@
     "@apollo/client": "^3.5.9",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
+    "@mantine/core": "^4.1.3",
+    "@mantine/dates": "^4.1.3",
+    "@mantine/dropzone": "^4.1.3",
+    "@mantine/form": "^4.1.3",
+    "@mantine/hooks": "^4.1.3",
+    "@mantine/modals": "^4.1.3",
+    "@mantine/next": "^4.1.3",
+    "@mantine/notifications": "^4.1.3",
+    "@mantine/prism": "^4.1.3",
+    "@mantine/rte": "^4.1.3",
+    "@mantine/spotlight": "^4.1.3",
     "@openzeppelin/contracts": "^4.4.1",
     "@types/formidable": "^2.0.4",
     "classnames": "^2.3.1",
+    "dayjs": "^1.11.0",
     "flowbite": "^1.4.1",
     "formidable": "^2.0.1",
     "formik": "^2.2.9",
