--- a/nft-marketplace/package.json
+++ b/nft-marketplace/package.json
@@ -30,11 +30,14 @@
     "formidable": "^2.0.1",
     "formik": "^2.2.9",
     "next": "^12.0.10",
+    "next-themes": "^0.1.1",
     "nft.storage": "^6.0.0",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
+    "react-switch": "^6.0.0",
     "react-toastify": "^8.2.0",
     "web3modal": "^1.9.5",
     "yup": "^0.32.11"
