--- a/nft-marketplace/package.json
+++ b/nft-marketplace/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage":"http://www.CSW0126.github.io/COMP3334_GroupProject",
   "name": "nft-marketplace",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "next lint"
   },
   "dependencies": {
@@ -62,6 +65,7 @@
     "eslint-plugin-react": "^7.28.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
+    "gh-pages": "^3.2.3",
     "hardhat": "^2.8.0",
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
